--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <input type="text" placeholder="Nombre completo" required />
                 <input type="email" placeholder="Correo electrónico" required />
                 <input type="password" placeholder="Contraseña" required />
-                <button type="button">Registrarse</button>
+                <button type="button" id="btn-enviar-registro">Registrarse</button>
             </form>
         </div>
 
@@ -49,7 +49,7 @@
                 <input type="email" placeholder="Correo electrónico" required />
                 <input type="password" placeholder="Contraseña" required />
                 <a href="#">¿Olvidaste tu contraseña?</a>
-                <button type="button">Entrar</button>
+                <button type="button" id="btn-enviar-login">Entrar</button>
             </form>
         </div>
 
